[gd_scene load_steps=14 format=3 uid="uid://bbjy1my81fjd1"]

[ext_resource type="Texture2D" uid="uid://p3j5am4nurhy" path="res://assets/characters/historian.png" id="1_adohg"]
[ext_resource type="Script" path="res://scripts/historian.gd" id="1_da2ma"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nd57u"]
atlas = ExtResource("1_adohg")
region = Rect2(64, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wr1a3"]
atlas = ExtResource("1_adohg")
region = Rect2(128, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pbwr"]
atlas = ExtResource("1_adohg")
region = Rect2(192, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l06pn"]
atlas = ExtResource("1_adohg")
region = Rect2(256, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_67vnt"]
atlas = ExtResource("1_adohg")
region = Rect2(320, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r276e"]
atlas = ExtResource("1_adohg")
region = Rect2(384, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ui5w"]
atlas = ExtResource("1_adohg")
region = Rect2(448, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_idflh"]
atlas = ExtResource("1_adohg")
region = Rect2(512, 640, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_62v6e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nd57u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wr1a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pbwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l06pn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67vnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r276e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ui5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idflh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ucof"]
size = Vector2(26, 45)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qs0mi"]
size = Vector2(37.5, 51.25)

[node name="Historian" type="CharacterBody2D"]
z_index = -1
scale = Vector2(0.8, 0.8)
collision_layer = 2
collision_mask = 129
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_da2ma")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_62v6e")
frame = 6
frame_progress = 0.294259

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 7.5)
shape = SubResource("RectangleShape2D_3ucof")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 129

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2(-1.25, 8.125)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_qs0mi")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="InteractArea" to="." method="_on_interact_area_area_entered"]
[connection signal="area_exited" from="InteractArea" to="." method="_on_interact_area_area_exited"]
